--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,9 +1,11 @@
 alembic==1.7.5
+aniso8601==9.0.1
 attrs==21.4.0
 click==8.0.3
 Flask==2.0.2
 Flask-Login==0.5.0
 Flask-Migrate==3.1.0
+Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 iniconfig==1.1.1
@@ -17,6 +19,8 @@ psycopg2-binary==2.9.3
 py==1.11.0
 pyparsing==3.0.6
 pytest==6.2.5
+pytz==2021.3
+six==1.16.0
 SQLAlchemy==1.4.29
 toml==0.10.2
 Werkzeug==2.0.2
